--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ svg{
 
 .container{
     width: 100%;
-    min-height: 100vh;
+    min-height: 90vh;
     display: grid;
     place-items: center;
 }
@@ -119,31 +119,36 @@ svg{
 
 
 
-@media (min-width:600px) {
+@media (min-width:1140px) {
     body{
         background-image: url(/images/bg-desktop.svg);
         background-size: cover;
         background-repeat: no-repeat;
-        display: grid;
-        place-items: center;
     }
 
 
     .card__huddle{
         display: grid;
-        grid-template-columns: repeat(4,1fr);
+        place-items: end;
+        grid-template-columns: repeat(2,1fr);
         background-image: none;
-        padding: 4rem;
+        gap: 0;
+        position: relative;
     }
 
     .header{
-        grid-column: 1 / 3;
+        grid-column: 1 / 2;
     }
 
     .card__info{
-        grid-column: 3 / 5;
+        grid-column: 2 / 3;
         text-align: left;
         align-items: flex-start;
+        position: relative;
+        right: 0;
+        gap: 0;
+        top: 0px;
+        height: 100%;
     }
 
     .card__info > h2{
@@ -156,8 +161,10 @@ svg{
     }
 
     .card__footer{
-        grid-column: 4 / 6;
-        justify-content: space-between;
+        justify-content: space-around;
+        position: absolute;
+        right: 0;
+        bottom: 30px;
     }
 
 }
